# ProSST

./: README.md  pyproject.toml  requirements.txt
src/prosst/: __init__.py
src/prosst/structure/: get_sst_seq.py
src/prosst/structure/utils/: data_utils.py
