[project]
name = "prosst"
version = "0.1.0"
description = "Packaged ProSST (not official)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.83",
    "biotite>=0.39.0",
    "joblib>=1.3.2",
    "numpy>=2.3.4",
    "pandas>=2.3.2",
    "pathos>=0.3.2",
    "torch>=2.8.0",
    "torch-geometric>=2.5.0",
    "torch-scatter>=2.1.2",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["hatchling", "torch"]
build-backend = "hatchling.build"

